# shmtu-terminal-tauri

./: .gitignore  .gitmodules  CLAUDE.md  README.md  dev.py  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vite.config.ts
.github/workflows/: build-desktop.yml  docs-pages.yml
Documents/docs/: index.md
Documents/docs/.vitepress/: config.ts
Documents/docs/advanced/: app-structure.md  build-and-release.md  config-and-storage.md  data-flow.md  overview.md  sync-and-captcha.md
Documents/docs/guide/: bills-and-sync.md  faq.md  identity-and-account.md  interface-overview.md  quick-start.md  settings-and-data.md  statistics-and-analysis.md
Documents/docs/ocr/: readme.md
Documents/docs/user/: backup-and-restore.md  check-stats.md  faq.md  get-started.md  sync-bills.md
scripts/: chmod_sh.py  clean_data.ps1  clean_data.py  clean_data.sh  dev.py  run_cas_cli.ps1  run_cas_cli.py  run_cas_lib.ps1  run_cas_lib.py  run_ocr_cli.py  run_ocr_gui.py  run_ocr_server.ps1  run_ocr_server.py  run_tauri.ps1  run_tauri.py  run_tauri.sh
scripts/cas/: run_cas_cli.py  run_cas_cli.sh  run_cas_lib.py  run_cas_lib.sh
scripts/dev/: dev.ps1  dev.py  dev.sh
scripts/maintenance/: chmod_sh.ps1  chmod_sh.py  chmod_sh.sh  clean_data.py  update_all_cargo.ps1  update_all_cargo.py  update_all_cargo.sh
scripts/ocr/: run_ocr_cli.ps1  run_ocr_cli.py  run_ocr_cli.sh  run_ocr_gui.ps1  run_ocr_gui.py  run_ocr_gui.sh  run_ocr_server.py  run_ocr_server.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/Data/: .gitignore
src-tauri/icons/: icon.icns
src-tauri/src/: auto_sync.rs  error.rs  lib.rs  main.rs  models.rs  remote.rs  session_refresh.rs  state.rs
src-tauri/src/classification/: mod.rs
src-tauri/src/cloud/: backup.rs  mod.rs  webdav.rs
src-tauri/src/commands/: account.rs  bill.rs  captcha.rs  classify.rs  cloud.rs  config.rs  data.rs  debug.rs  error.rs  identity.rs  mod.rs  ocr_server.rs  p2p.rs  person_account.rs  remote.rs  statistics.rs  sync.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/db/: init.rs  mod.rs  store.rs
src-tauri/src/entity/: accounts.rs  bill_merged.rs  bill_original.rs  identities.rs  mod.rs  operation_log.rs  person_account.rs  session_info.rs
src-tauri/src/export/: mod.rs
src-tauri/src/ocr_server/: mod.rs
src-tauri/src/p2p/: client.rs  http_server.rs  mod.rs
src-tauri/src/sql/: create_tables.sql
src-tauri/src/sync/: bill_merge.rs  mod.rs
src/components/Charts/: CategoryBarChart.tsx  CategoryPieChart.tsx  ConsumptionDistributionChart.tsx  ExpenseTrendChart.tsx  MealDistChart.tsx  MerchantRankingChart.tsx  MonthComparisonCard.tsx  PositionPieChart.tsx
src/components/Common/: AppProvider.tsx  BillDetailDialog.tsx  ContextMenu.tsx  ErrorDialog.tsx  GlobalContextMenuGuard.tsx  IdentitySelectDialog.tsx  LoadingSkeleton.tsx  ManualCaptchaDialog.tsx  StartupPasswordDialog.tsx  SyncRangeDialog.tsx  SyncStatusPanel.tsx  TransactionDetailDialog.tsx  motion.tsx
src/components/Layout/: AppLayout.tsx
src/hooks/: index.ts
src/pages/About/: AboutDialog.tsx
src/services/: tauri.ts
src/stores/: appStore.ts
src/types/: index.ts
src/utils/: date.ts  translation.ts
(+13 files in other folders)
