[package]
name = "shmtu-terminal-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shmtu_terminal_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shmtu-cas = { path = "vendor/shmtu-cas-rs/Core/shmtu-cas" }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
subtle = "2"

# Configuration
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# HTTP client (for remote rule updates)
reqwest = { version = "0.12", features = ["cookies", "json"] }

# ZIP (for snapshots)
zip = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
